# runbox

./: .gitignore  Cargo.toml  Makefile  ORCH_PROMPT.md  README.md
.orch/: config.yaml
crates/runbox-cli/: Cargo.toml
crates/runbox-cli/src/: main.rs
crates/runbox-cli/src/tui/: app.rs  event.rs  mod.rs  ui.rs
crates/runbox-cli/src/tui/views/: log_view.rs  logs.rs  mod.rs  monitor.rs  process_list.rs
crates/runbox-cli/tests/: attach.rs  create_record.rs  history.rs  list.rs  local_runbox.rs  logs.rs  playlist_add.rs  playlist_create.rs  playlist_list.rs  playlist_remove.rs  playlist_run.rs  playlist_show.rs  ps.rs  replay.rs  run.rs  run_direct.rs  show.rs  skill_export.rs  stop.rs  template_create.rs  template_delete.rs  template_list.rs  template_show.rs  validate.rs
crates/runbox-cli/tests/fixtures/: invalid_run.json  malformed.json  valid_playlist.json  valid_run.json  valid_template.json
crates/runbox-core/: Cargo.toml
crates/runbox-core/src/: binding.rs  config.rs  daemon.rs  git.rs  index.rs  lib.rs  local_storage.rs  playlist.rs  record.rs  replay_spec.rs  result.rs  run.rs  runnable.rs  skill.rs  skill_export.rs  storage.rs  task.rs  template.rs  validation.rs  xdg.rs
crates/runbox-core/src/runtime/: background.rs  mod.rs  tmux.rs  zellij.rs
crates/runbox-daemon/: Cargo.toml
crates/runbox-daemon/src/: lib.rs  main.rs  process_manager.rs  protocol.rs  server.rs
crates/runbox-py/: Cargo.toml
crates/runbox-py/src/: lib.rs
docs/: opencode-skill.md  test_coverage_summary.md  tutorial.md
docs/issues/: ISSUE-001-run-spec.md  ISSUE-002-rust-cli.md  ISSUE-003-run-result.md  ISSUE-004-worktree-replay.md
docs/issues/runs/ISSUE-001/: 20251227-195252.md
docs/issues/runs/ISSUE-002/: 20251227-210405.md  20251227-210416.md  20251227-210420.md
specs/: playlist.schema.json  record-task-separation.md  run.cue  run.md  run.schema.json  run_result.schema.json  run_template.schema.json
specs/examples/: playlist.example.json  run.example.json  run_template.example.json
