[workspace]
resolver = "2"
members = [
    "crates/runbox-core",
    "crates/runbox-cli",
    "crates/runbox-py",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/user/runbox"

[workspace.dependencies]
runbox-core = { path = "crates/runbox-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
anyhow = "1"
