[package]
name = "runbox-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for runbox"

[[bin]]
name = "runbox"
path = "src/main.rs"

[dependencies]
runbox-core = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
dirs = "5"
dialoguer = "0.11"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
