[package]
name = "runbox-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for runbox"

[[bin]]
name = "runbox"
path = "src/main.rs"

[dependencies]
runbox-core = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
dirs = "5"
dialoguer = "0.11"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
# TUI dependencies - use older versions for Rust 1.87 compatibility
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }

[features]
# Enable tests that require tmux to be installed
tmux-tests = []

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serde_json = { workspace = true }
