[package]
name = "runbox-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and logic for runbox"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
regex = "1"
