[package]
name = "runbox-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and logic for runbox"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
regex = "1"
dirs = "5"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
jsonschema = "0.18"

[dev-dependencies]
tempfile = "3"
