[package]
name = "runbox-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and logic for runbox"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
regex = "1"
dirs = "5"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
jsonschema = "0.18"
toml = "0.8"
libc = "0.2"
log = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
