[package]
name = "runbox-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Background daemon for runbox process management"

[[bin]]
name = "runbox-daemon"
path = "src/main.rs"

[dependencies]
runbox-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
libc = "0.2"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
signal-hook = "0.3"
nix = { version = "0.29", features = ["process", "signal", "fs"] }

[dev-dependencies]
tempfile = "3"
